--- a/src/JakobHendrixCore/JakobHendrixCore/project.json
+++ b/src/JakobHendrixCore/JakobHendrixCore/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-*",
+  "version": "0.0.1-*",
   "buildOptions": {
     "debugType": "portable",
     "emitEntryPoint": true
@@ -29,5 +29,8 @@
       "Views",
       "appsettings.json"
     ]
+  },
+  "tools": {
+    "Microsoft.DotNet.Watcher.Tools": ""
   }
 }
