--- a/src/JakobHendrixCore/JakobHendrixCore/JakobHendrixCore.csproj
+++ b/src/JakobHendrixCore/JakobHendrixCore/JakobHendrixCore.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <None Include="wwwroot\docs\poem.txt" />
   </ItemGroup>
 
 </Project>
